--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quos natus in laboriosam alias, iure voluptatum earum. Exercitationem, sint minima? Quaerat, hic. Quam explicabo sit, laborum non enim fugit officia!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia dolorem, unde voluptatum quas quos eaque fugit reprehenderit, nemo ducimus debitis exercitationem quo numquam laudantium saepe vero magni excepturi minus deleniti.</p>
         </article>
     </main>
 </body>
